; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/alchemy/devboards/extr_bcsr.c_bcsr_mod.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/alchemy/devboards/extr_bcsr.c_bcsr_mod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@bcsr_regs = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bcsr_mod(i32 %0, i16 zeroext %1, i16 zeroext %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i16, align 2
  %6 = alloca i16, align 2
  %7 = alloca i16, align 2
  %8 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i16 %1, i16* %5, align 2
  store i16 %2, i16* %6, align 2
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @bcsr_regs, align 8
  %10 = load i32, i32* %4, align 4
  %11 = zext i32 %10 to i64
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %8, align 8
  %15 = call i32 @spin_lock_irqsave(i32* %13, i64 %14)
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @bcsr_regs, align 8
  %17 = load i32, i32* %4, align 4
  %18 = zext i32 %17 to i64
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call zeroext i16 @__raw_readw(i32 %21)
  store i16 %22, i16* %7, align 2
  %23 = load i16, i16* %5, align 2
  %24 = zext i16 %23 to i32
  %25 = xor i32 %24, -1
  %26 = load i16, i16* %7, align 2
  %27 = zext i16 %26 to i32
  %28 = and i32 %27, %25
  %29 = trunc i32 %28 to i16
  store i16 %29, i16* %7, align 2
  %30 = load i16, i16* %6, align 2
  %31 = zext i16 %30 to i32
  %32 = load i16, i16* %7, align 2
  %33 = zext i16 %32 to i32
  %34 = or i32 %33, %31
  %35 = trunc i32 %34 to i16
  store i16 %35, i16* %7, align 2
  %36 = load i16, i16* %7, align 2
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** @bcsr_regs, align 8
  %38 = load i32, i32* %4, align 4
  %39 = zext i32 %38 to i64
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i64 %39
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @__raw_writew(i16 zeroext %36, i32 %42)
  %44 = call i32 (...) @wmb()
  %45 = load %struct.TYPE_2__*, %struct.TYPE_2__** @bcsr_regs, align 8
  %46 = load i32, i32* %4, align 4
  %47 = zext i32 %46 to i64
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %45, i64 %47
  %49 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i32 0, i32 0
  %50 = load i64, i64* %8, align 8
  %51 = call i32 @spin_unlock_irqrestore(i32* %49, i64 %50)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local zeroext i16 @__raw_readw(i32) #1

declare dso_local i32 @__raw_writew(i16 zeroext, i32) #1

declare dso_local i32 @wmb(...) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
